--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -23,13 +23,13 @@
       <li><a href="../faq/index.html">FAQ</a></li>
       <li><a href="../guides/index.html">Guides</a></li>
       <li><a href="../videos/index.html">Videos</a></li>
-      <li><a href="index.html">Cheat Sheet</a></li>
+      <li><a href="index.html">Quick Tips</a></li>
     </ul>
   </nav>
 </header>
     <div class="content">
       <section class="intro">
-    <h2>Cheat Sheet:</h2>
+    <h2>Quick Tips:</h2>
     <h3>Wanna be a Basecamp power user? Hone your skills with these pro tips!</h3>
 </section>
 
@@ -213,7 +213,7 @@
 </section>
 
 <section class="spread">
-  Don&rsquo;t mind sharing your secrets? <a href="http://twitter.com/share?text=Level%20up%20your%20Basecamp%20skills%20with%20these%20Pro%20Tips:%20&url=http://basecamp.com/help/cheatsheet" target="_blank">Tweet this Basecamp cheat sheet</a>.
+  Don&rsquo;t mind sharing your secrets? <a href="http://twitter.com/share?text=Level%20up%20your%20Basecamp%20skills%20with%20these%20Pro%20Tips:%20&url=http://basecamp.com/help/cheatsheet" target="_blank">Tweet these Basecamp Quick Tips</a>.
 </section>
 
 <script>
@@ -228,7 +228,7 @@
     <li class="faq"><a href="../faq/index.html">FAQ</a> <span class="tooltip">Find all of the answers to commonly asked questions about Basecamp.</span></li>
     <li class="guides"><a href="../guides/index.html">Guides</a> <span class="tooltip">Dig into our fully-packed guides to learn Basecamp inside and out.</span></li>
     <li class="vids"><a href="../videos/index.html">Videos</a> <span class="tooltip">Short, fun clips showing tips, tricks, and shortcuts to get the most out of Basecamp.</span></li>
-    <li class="cheats"><a href="index.html">Cheat Sheet</a> <span class="tooltip">Level up your Basecamp skills with quick Pro Tips.</span></li>
+    <li class="cheats"><a href="index.html">Quick Tips</a> <span class="tooltip">Level up your Basecamp skills with quick Pro Tips.</span></li>
     <li class="classes"><a href="../../support/index.html#classes" target="_blank">Live Classes</a> <span class="tooltip">Become a Basecamp Pro in just 30 minutes, or participate in a Live Q&amp;A.</span></li>
     <li class="features"><a href="../../announcements/index.html" target="_blank">New Features</a> <span class="tooltip">Basecamp gets better every day. See the latest features.</span></li>
     
