Correct the incorrect casing on the keyboard shortcuts.

--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -38,7 +38,7 @@
     <h1>Keyboard Shortcuts</h1>
     
     <article class="sheet">
-      <h2>Navigate with keyboard shortcuts G + 1 through 6</h2>
+      <h2>Navigate with keyboard shortcuts g + 1 through 6</h2>
       <figure>
         <video preload>
           <source src="keyboard-shortcuts-g6.mp4" format="video/mp4">
@@ -47,12 +47,12 @@
       </figure>
       <p>Type simple keyboard shortcuts to navigate quickly around Basecamp!</p>
 
-<p><code>G</code> + <code>1</code> goes to <strong>Projects</strong><br/>
-<code>G</code> + <code>2</code> goes to <strong>Calendar</strong><br/>
-<code>G</code> + <code>3</code> goes to <strong>Everything</strong><br/>
-<code>G</code> + <code>4</code> goes to <strong>Timeline</strong><br/>
-<code>G</code> + <code>5</code> goes to <strong>Everyone</strong><br/>
-<code>G</code> + <code>6</code> goes to <strong>Me</strong></p>
+<p><code>g</code> + <code>1</code> goes to <strong>Projects</strong><br/>
+<code>g</code> + <code>2</code> goes to <strong>Calendar</strong><br/>
+<code>g</code> + <code>3</code> goes to <strong>Everything</strong><br/>
+<code>g</code> + <code>4</code> goes to <strong>Timeline</strong><br/>
+<code>g</code> + <code>5</code> goes to <strong>Everyone</strong><br/>
+<code>g</code> + <code>6</code> goes to <strong>Me</strong></p>
 
     </article>
   
@@ -64,7 +64,7 @@
           <source src="keyboard-shortcuts-gf.webm" format="video/webm">
         </video>
       </figure>
-      <p>Type <code>G</code> + <code>F</code> to instantly get to the <strong>search bar</strong> from anywhere!</p>
+      <p>Type <code>g</code> + <code>f</code> to instantly get to the <strong>search bar</strong> from anywhere!</p>
 
     </article>
 
